prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_typeof_to_int.nut
// EXPECTED: compile-time error - typeof produces string, not int
local x: int = typeof 42
return x
